[metadata]
name = UniGrammarRuntimeCore
#version = 0.1
author = KOLANICH
url = https://gitlab.com/UniGrammar/UniGrammarRuntimeCore.py
description = The core of framework for runtime for UniGrammar. Can be used by third-party tools not using UniGrammar, but when it is desireable to make integration with UniGrammar easier.
long_description = file: ReadMe.md
keywords = grammars, UniGrammar
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Security
	Topic :: Text Processing

[options]
python_requires = >=3.4
zip_safe = True
include_package_data = True
packages = find:
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
